--- a/tetris.html
+++ b/tetris.html
@@ -4,376 +4,45 @@
     <title>Telegram Tetris</title>
     <meta charset="UTF-8">
     <script src="https://telegram.org/js/games.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: white;
-            color: black;
-            margin: 0;
-            padding: 10px;
-            text-align: center;
-            touch-action: manipulation;
-        }
-        canvas {
-            display: block;
-            margin: 0 auto;
-            background: black;
-        }
-        .info {
-            margin: 10px;
-            font-size: 18px;
-        }
-        table {
-            margin: 10px auto;
-            border-collapse: collapse;
-        }
-        td, th {
-            border: 1px solid black;
-            padding: 5px 10px;
-        }
-        .controls {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        .control-btn {
-            padding: 15px 20px;
-            font-size: 18px;
-            background: #f0f0f0;
-            border: 2px solid black;
-            border-radius: 10px;
-            cursor: pointer;
-            user-select: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Тетрис</h1>
-<div class="info">Текущий счет: <span id="score">0</span></div>
-<div class="info">Уровень: <span id="level">1</span></div>
-<table>
-    <tr>
-        <th>Лучший игрок</th>
-        <th>Рекорд</th>
-    </tr>
-    <tr>
-        <td id="top-player">-</td>
-        <td id="top-score">0</td>
-    </tr>
-    <tr>
-        <th>Мой рекорд</th>
-        <th>Рекорд</th>
-    </tr>
-    <tr>
-        <td>Вы</td>
-        <td id="my-best">0</td>
-    </tr>
-</table>
-<canvas id="tetris" width="200" height="400"></canvas>
+<div class="wrap">
+    <div class="display">
+        <div>
+            <canvas id="tetris" width="200" height="400"></canvas>
+        </div>
+        <div>
+            <div class="info">SCORE <br><span id="score">0</span></div>
+            <div class="info">HI-SCORE <br><span id="my-best">0</span></div>
 
-<div class="controls">
-    <div class="control-btn" id="left-btn">←</div>
-    <div class="control-btn" id="right-btn">→</div>
-    <div class="control-btn" id="rotate-btn">↻</div>
-    <div class="control-btn" id="down-btn">↓</div>
+            <div class="info">LEVEL: <span id="level">1</span></div>
+
+
+
+            <table style="display: none">
+                <tr>
+                    <th>Лучший игрок</th>
+                    <th>Рекорд</th>
+                </tr>
+                <tr>
+                    <td id="top-player">-</td>
+                    <td id="top-score">0</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="controls">
+        <div class="control-btn" id="left-btn">←</div>
+        <div class="control-btn" id="right-btn">→</div>
+        <div class="control-btn" id="rotate-btn">↻</div>
+        <div class="control-btn" id="down-btn">↓</div>
+    </div>
 </div>
 
-<script>
-    // Настройки игры
-    const canvas = document.getElementById('tetris');
-    const ctx = canvas.getContext('2d');
-    const blockSize = 20;
-    const rows = 20;
-    const cols = 10;
 
-    // Игровое поле
-    let grid = Array(rows).fill().map(() => Array(cols).fill(0));
 
-    // Фигуры Тетриса (черно-белые)
-    const shapes = [
-        [[1, 1, 1, 1]], // I
-        [[1, 1], [1, 1]], // O
-        [[1, 1, 1], [0, 1, 0]], // T
-        [[1, 1, 1], [1, 0, 0]], // L
-        [[1, 1, 1], [0, 0, 1]], // J
-        [[1, 1, 0], [0, 1, 1]], // S
-        [[0, 1, 1], [1, 1, 0]]  // Z
-    ];
 
-    // Текущая фигура
-    let currentPiece = null;
-    let currentX = 0;
-    let currentY = 0;
-    let currentRotation = 0;
-
-    // Счет и уровень
-    let score = 0;
-    let level = 1;
-    let myBestScore = localStorage.getItem('myBestScore') || 0;
-    let topPlayer = localStorage.getItem('topPlayer') || '-';
-    let topScore = localStorage.getItem('topScore') || 0;
-
-    // Скорость падения (мс)
-    let dropInterval = 1000; // Начальная скорость: 1 секунда
-    let lastTime = 0;
-    let gameOverFlag = false;
-
-    // Элементы управления
-    const leftBtn = document.getElementById('left-btn');
-    const rightBtn = document.getElementById('right-btn');
-    const rotateBtn = document.getElementById('rotate-btn');
-    const downBtn = document.getElementById('down-btn');
-
-    // Обновление таблицы рекордов
-    function updateLeaderboard() {
-        document.getElementById('score').textContent = score;
-        document.getElementById('level').textContent = level;
-        document.getElementById('my-best').textContent = myBestScore;
-        document.getElementById('top-player').textContent = topPlayer;
-        document.getElementById('top-score').textContent = topScore;
-    }
-
-    // Создание новой фигуры
-    function newPiece() {
-        const shape = shapes[Math.floor(Math.random() * shapes.length)];
-        currentPiece = shape;
-        currentX = Math.floor(cols / 2) - Math.floor(shape[0].length / 2);
-        currentY = 0;
-        currentRotation = 0;
-
-        // Проверка на проигрыш
-        if (collision()) {
-            gameOver();
-        }
-    }
-
-    // Проверка столкновений
-    function collision() {
-        for (let y = 0; y < currentPiece.length; y++) {
-            for (let x = 0; x < currentPiece[y].length; x++) {
-                if (currentPiece[y][x] !== 0) {
-                    const newX = currentX + x;
-                    const newY = currentY + y;
-
-                    if (
-                        newX < 0 ||
-                        newX >= cols ||
-                        newY >= rows ||
-                        (newY >= 0 && grid[newY][newX] !== 0)
-                    ) {
-                        return true;
-                    }
-                }
-            }
-        }
-        return false;
-    }
-
-    // Фиксация фигуры на поле
-    function lockPiece() {
-        for (let y = 0; y < currentPiece.length; y++) {
-            for (let x = 0; x < currentPiece[y].length; x++) {
-                if (currentPiece[y][x] !== 0) {
-                    if (currentY + y >= 0) {
-                        grid[currentY + y][currentX + x] = 1;
-                    }
-                }
-            }
-        }
-
-        // Проверка заполненных линий
-        clearLines();
-
-        // Новая фигура
-        newPiece();
-    }
-
-    // Очистка заполненных линий
-    function clearLines() {
-        let linesCleared = 0;
-        for (let y = rows - 1; y >= 0; y--) {
-            if (grid[y].every(cell => cell !== 0)) {
-                grid.splice(y, 1);
-                grid.unshift(Array(cols).fill(0));
-                linesCleared++;
-                y++; // Проверить ту же линию снова
-            }
-        }
-
-        // Увеличение счета (1 очко за линию)
-        if (linesCleared > 0) {
-            score += linesCleared * 1;
-
-            // Увеличение уровня каждые 20 очков
-            const newLevel = Math.floor(score / 20) + 1;
-            if (newLevel > level) {
-                level = newLevel;
-                dropInterval = Math.max(100, 1000 - (level - 1) * 200); // Увеличиваем скорость
-            }
-
-            updateLeaderboard();
-        }
-    }
-
-    // Отрисовка игры
-    function draw() {
-        // Очистка поля
-        ctx.fillStyle = 'black';
-        ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-        // Отрисовка сетки
-        ctx.strokeStyle = '#333';
-        for (let y = 0; y < rows; y++) {
-            for (let x = 0; x < cols; x++) {
-                ctx.strokeRect(x * blockSize, y * blockSize, blockSize, blockSize);
-            }
-        }
-
-        // Отрисовка стакана
-        for (let y = 0; y < rows; y++) {
-            for (let x = 0; x < cols; x++) {
-                if (grid[y][x] !== 0) {
-                    ctx.fillStyle = 'white';
-                    ctx.fillRect(x * blockSize, y * blockSize, blockSize, blockSize);
-                }
-            }
-        }
-
-        // Отрисовка текущей фигуры
-        if (currentPiece) {
-            for (let y = 0; y < currentPiece.length; y++) {
-                for (let x = 0; x < currentPiece[y].length; x++) {
-                    if (currentPiece[y][x] !== 0) {
-                        ctx.fillStyle = 'white';
-                        ctx.fillRect(
-                            (currentX + x) * blockSize,
-                            (currentY + y) * blockSize,
-                            blockSize,
-                            blockSize
-                        );
-                    }
-                }
-            }
-        }
-    }
-
-    // Движение влево
-    function moveLeft() {
-        currentX--;
-        if (collision()) currentX++;
-        draw();
-    }
-
-    // Движение вправо
-    function moveRight() {
-        currentX++;
-        if (collision()) currentX--;
-        draw();
-    }
-
-    // Движение вниз
-    function moveDown() {
-        currentY++;
-        if (collision()) {
-            currentY--;
-            lockPiece();
-        }
-        draw();
-    }
-
-    // Быстрое падение
-    function hardDrop() {
-        while (!collision()) {
-            currentY++;
-        }
-        currentY--;
-        lockPiece();
-        draw();
-    }
-
-    // Вращение фигуры
-    function rotatePiece() {
-        const rotated = currentPiece[0].map((_, i) =>
-            currentPiece.map(row => row[i]).reverse()
-        );
-        const oldPiece = currentPiece;
-        currentPiece = rotated;
-        if (collision()) {
-            currentPiece = oldPiece;
-        }
-        draw();
-    }
-
-    // Игровой цикл
-    function gameLoop(time = 0) {
-        if (gameOverFlag) return;
-        if (time - lastTime > dropInterval) {
-            moveDown();
-            lastTime = time;
-        }
-        requestAnimationFrame(gameLoop);
-    }
-
-    // Конец игры
-    function gameOver() {
-        gameOverFlag = true;
-        alert(`Игра окончена! Ваш счет: ${score}`);
-
-        // Обновление рекордов
-        if (score > myBestScore) {
-            myBestScore = score;
-            localStorage.setItem('myBestScore', myBestScore);
-        }
-
-        if (score > topScore) {
-            topScore = score;
-            topPlayer = "Вы";
-            localStorage.setItem('topScore', topScore);
-            localStorage.setItem('topPlayer', topPlayer);
-        }
-
-        // Сброс игры
-        grid = Array(rows).fill().map(() => Array(cols).fill(0));
-        score = 0;
-        level = 1;
-        dropInterval = 1000;
-        gameOverFlag = false;
-        updateLeaderboard();
-        newPiece();
-        draw();
-        lastTime = 0;
-        requestAnimationFrame(gameLoop);
-    }
-
-    // Назначение обработчиков кнопок
-    leftBtn.addEventListener('click', moveLeft);
-    rightBtn.addEventListener('click', moveRight);
-    rotateBtn.addEventListener('click', rotatePiece);
-    downBtn.addEventListener('click', hardDrop);
-
-    // Назначение обработчиков клавиатуры
-    document.addEventListener('keydown', (e) => {
-        if (!currentPiece || gameOverFlag) return;
-
-        switch (e.key) {
-            case 'ArrowLeft': moveLeft(); break;
-            case 'ArrowRight': moveRight(); break;
-            case 'ArrowDown': moveDown(); break;
-            case 'ArrowUp': rotatePiece(); break;
-            case ' ': hardDrop(); break; // Пробел для мгновенного падения
-        }
-    });
-
-    // Запуск игры
-    updateLeaderboard();
-    newPiece();
-    draw();
-    gameLoop();
-
-    // Интеграция с Telegram
-    Telegram.WebApp.expand();
-    Telegram.WebApp.enableClosingConfirmation();
-</script>
+<script src="js.js"></script>
 </body>
 </html>
